[package]
name = "esp-mqtt-sender"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
opt-level = "z"

#[profile.release]

[dependencies]
esp-idf-sys = { version = "0.31.0", features = ["binstart"] }
esp-idf-svc = "0.39.1"
esp-idf-hal = "0.35.1"
embedded-svc = "0.19"
embedded-hal = "0.2"
icm42670 = { git = "https://github.com/jessebraham/icm42670/", optional = true }
esp32c3 = "0.3.0"
toml-cfg = "0.1"
#riscv = { version = "0.7", features=["inline-asm"] }
#riscv-rt = "0.8.1"
get-uuid = { git = "https://github.com/ferrous-systems/espressif-trainings", package = "get-uuid" }
shared-bus = { version = "0.2.3",  features = ["xtensa"] }
shtcx      = { version = "0.10.0", optional = true }
smart-leds = { version = "0.3.0",  optional = true }


[build-dependencies]
embuild = "0.28.5"
anyhow = "1.0.50"


[features]